# bmstu-projects

DiamondSquareNew/: .gitmodules  Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.h  DiamondSquare  DiamondSquare.cpp  DiamondSquare.hpp  Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp  Triangle.cpp  Triangle.hpp  main.c.txt  main.cpp  ocl_type.inl.txt  stdafx.cpp  stdafx.hpp  vec1.inl.txt
DiamondSquareNew/Debug/: DiamondSquare  imgui.ini
DiamondSquareNew/Debug/resources/: daylight.tga
DiamondSquareNew/build-xcode/: CMakeCache.txt  Makefile  cmake_install.cmake
DiamondSquareNew/build-xcode-ide/: CMakeCache.txt  cmake_install.cmake
DiamondSquareNew/build-xcode-ide/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
DiamondSquareNew/build-xcode-ide/DiamondSquare.xcodeproj/: project.pbxproj
DiamondSquareNew/build-xcode-ide/glfw/: cmake_install.cmake  cmake_uninstall.cmake
DiamondSquareNew/build-xcode-ide/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  uninstall_cmakeRulesBuildPhase.makeDebug
DiamondSquareNew/build-xcode-ide/glfw/GLFW.xcodeproj/: project.pbxproj
DiamondSquareNew/build-xcode-ide/glfw/examples/: cmake_install.cmake
DiamondSquareNew/build-xcode-ide/resources/: stormydays_large.tga
DiamondSquareNew/build-xcode/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
DiamondSquareNew/resources/: stormydays_large.tga
(+147 files in other folders)
